--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,4 +27,10 @@ flutter:
     - assets/images/artikel/wisuda.png
     - assets/images/artikel/kunjungan.png
     - assets/images/artikel/sepakbola.png
+    - assets/images/ic_lonceng.png
+    - assets/images/ic_jamnew.png
+    - assets/images/ic_tugasnew.png
+    - assets/images/ic_mapelnew.png
+    - assets/images/ic_kalendernew.png
+
     
