ADD splashSreen, UPDATE pengumuman, home, detialpengumuman dll

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   intl: ^0.19.0  
   timeago: ^3.6.0
   table_calendar: ^3.0.0
+  flutter_native_splash: ^2.3.6
+  image_picker: ^0.8.6
+  cached_network_image: ^3.2.3
 
 
   flutter_localizations:
@@ -41,3 +44,4 @@ flutter:
     - assets/images/ic_tugasnew.png
     - assets/images/ic_mapelnew.png
     - assets/images/ic_kalendernew.png
+    - assets/images/splashscreen.png
