--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_native_splash: ^2.3.6
   image_picker: ^0.8.6
   cached_network_image: ^3.2.3
+  percent_indicator: ^4.2.3
 
 
   flutter_localizations:
