--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   image_picker: ^0.8.6
   cached_network_image: ^3.2.3
   percent_indicator: ^4.2.3
+  flutter_html: ^3.0.0-beta.2
+  share_plus: ^7.0.2
+  path_provider: ^2.1.1
+  url_launcher: ^6.1.11
 
 
   flutter_localizations:
@@ -46,3 +50,4 @@ flutter:
     - assets/images/ic_mapelnew.png
     - assets/images/ic_kalendernew.png
     - assets/images/splashscreen.png
+    - assets/images/smk.png
