UPDATE LOGO SMK

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,4 +50,4 @@ flutter:
     - assets/images/ic_mapelnew.png
     - assets/images/ic_kalendernew.png
     - assets/images/splashscreen.png
-    - assets/images/smk.png
+    - assets/images/logosmk.png
