--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-  http: ^0.13.4
+  http: 1.3.0
   shared_preferences: ^2.5.2
   intl: ^0.19.0  
   timeago: ^3.6.0
