--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
 
   flutter_localizations:
     sdk: flutter  
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
