--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,10 +26,13 @@ dependencies:
   share_plus: ^7.0.2
   path_provider: ^2.1.1
   url_launcher: ^6.1.11
-  dio: ^5.3.2
-  file_picker: 10.1.2
+  dio: ^4.0.6
+  file_picker: ^10.1.1
+  flutter_pdfview: ^1.2.7
+  google_fonts: ^5.1.0
+  
 
-
+  
   flutter_localizations:
     sdk: flutter  
   permission_handler: ^12.0.0+1
