--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   file_picker: ^10.1.1
   flutter_pdfview: ^1.2.7
   google_fonts: ^5.1.0
+  flutter_secure_storage: ^8.0.0
   
 
   
