--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter_pdfview: ^1.2.7
   google_fonts: ^5.1.0
   flutter_secure_storage: ^8.0.0
+  html_unescape: ^2.0.0
+  
   
 
   
