--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,6 @@ dependencies:
   google_fonts: ^5.1.0
   flutter_secure_storage: ^8.0.0
   html_unescape: ^2.0.0
-  
-  
-  
-
-  
   flutter_localizations:
     sdk: flutter  
   permission_handler: ^12.0.0+1
@@ -44,8 +39,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.jpg"
+  remove_alpha_ios: true
 
 flutter:
   uses-material-design: true
